@@ -7,8 +7,8 @@ OUTPUT_ARCH(h8300h)
  * Declare some sizes.
  */
 _RamBase = DEFINED(_RamBase) ? _RamBase : 0x0;
-_RamSize = DEFINED(_RamSize) ? _RamSize : 1M;
-_HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0x4000;
+_RamSize = DEFINED(_RamSize) ? _RamSize : 256K;
+_HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0x0;
 _StackSize = DEFINED(_StackSize) ? _StackSize : 0x1000;
 
 ENTRY("_start")
@@ -88,7 +88,7 @@ SECTIONS
 	. += _StackSize;
 	_stack_init = .;
 	_clear_end = .;
-	_WorkspaceBase = .;
+	_WorkAreaBase = .;
 	 _end = .;
 	 __end = .;
     } >ram
